--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                   <div class="elementor-widget-container asda">
                     <a href="#">
                       <h1
-                        style="font-family: 'custom2', cursive; color: #e852bc"
+                        style="font-family: 'custom2', cursive; color: #c052e8"
                       >
                         $Jonesy
                       </h1>
@@ -349,7 +349,7 @@
                                 class="elementor-button-link elementor-button elementor-size-lg kkkkkksa"
                                 role="button"
                                 style="
-                                  background-color: #e852bc;
+                                  background-color: #c052e8;
                                   color: #ffffff;
                                   font-family: 'custom2', cursive;
                                   border-radius: 20px 20px 20px 20px;
@@ -420,7 +420,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-471"
                         >
                           <a
-                            href=" https://t.me/NASDAQ-4200Coin"
+                            href="tglink"
                             class="elementor-item elementor-item-anchor"
                             tabindex="-1"
                             >Telegram</a
@@ -508,7 +508,7 @@
                         class="elementor-button-link elementor-button elementor-size-md"
                         role="button"
                         style="
-                          background-color: #e852bc;
+                          background-color: #c052e8;
                           color: #ffffff;
                           font-family: 'custom2', cursive;
                           border-radius: 20px 20px 20px 20px;
@@ -547,7 +547,7 @@
                           href="tglink"
                           target="_blank"
                           style="
-                            background-color: #e852bc00;
+                            background-color: #c052e800;
                             border-radius: 16px;
                           "
                         >
@@ -564,7 +564,7 @@
                           href="twitterlink"
                           target="_blank"
                           style="
-                            background-color: #e852bc00;
+                            background-color: #c052e800;
                             border-radius: 16px;
                           "
                         >
@@ -1007,19 +1007,11 @@
                   data-widget_type="text-editor.default"
                 >
                   <div class="elementor-widget-container">
-                    <p>©2023 NASDAQ-4200</p>
+                    <p>©2023 Jonesy</p>
                     <p>
-                      The NASDAQ-4200 a beacon of modern financial markets,
-                      stands as a testament to innovation and technological
-                      prowess. Comprising the most influential and
-                      forward-thinking non-financial companies in the world, it
-                      captures the essence of the digital age. We symbolize a
-                      relentless pursuit of excellence and market leadership,
-                      making it a barometer of progress in the ever-evolving
-                      world of finance. As the crypto space continues to expand
-                      and evolve, it attracts people from all walks of life,
-                      each bringing their unique perspectives and talents, we
-                      will be leaders.
+                      Jonesy: the enigmatic crypto token navigating the digital
+                      frontier. A living algorithm on the blockchain, Jonesy
+                      isn't just a token; it's a key to encrypted possibilities.
                     </p>
                   </div>
                 </div>
