--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>Jonesy</title>
+    <title>SOLGAYDOLLAR2024</title>
 
-    <meta content="NASDAQ-4200" property="og:title" />
-
-    <meta content="NASDAQ-4200" property="twitter:title" />
     <meta property="og:image" content="./pow.png" />
 
     <link
@@ -270,7 +267,7 @@
                       <h1
                         style="font-family: 'custom2', cursive; color: #c052e8"
                       >
-                        $Jonesy
+                        $SOLLAR
                       </h1>
                       <!-- <img src="./txt.png" width="100%" height="100%"> -->
                     </a>
@@ -303,20 +300,12 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-468"
                         >
                           <a
-                            href="https://www.dextools.io/app/en/ether/pair-explorer/ "
+                            href="https://www.dextools.io/app/en/solana/pair-explorer/CvMJZci2QWPPVMMPfgoQ6Xg1YsVQ4hG9abzv9ZLt84vK"
                             class="elementor-item elementor-item-anchor"
                             >Live Chart</a
                           >
                         </li>
-                        <li
-                          class="menu-item menu-item-type-custom menu-item-object-custom menu-item-468"
-                        >
-                          <a
-                            href="https://etherscan.io/token/ "
-                            class="elementor-item elementor-item-anchor"
-                            >Contract</a
-                          >
-                        </li>
+
                         <li
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-470"
                         >
@@ -330,7 +319,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-471"
                         >
                           <a
-                            href="twitterlink"
+                            href="https://x.com/solgaydollar"
                             class="elementor-item elementor-item-anchor"
                             >Twitter</a
                           >
@@ -344,7 +333,7 @@
                           <div class="elementor-widget-container">
                             <div class="elementor-button-wrapper">
                               <a
-                                href="tglink"
+                                href="https://t.me/solgaydollar2024"
                                 target="_blank"
                                 class="elementor-button-link elementor-button elementor-size-lg kkkkkksa"
                                 role="button"
@@ -399,7 +388,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-469"
                         >
                           <a
-                            href="https://www.dextools.io/app/en/ether/pair-explorer/ "
+                            href="https://www.dextools.io/app/en/solana/pair-explorer/CvMJZci2QWPPVMMPfgoQ6Xg1YsVQ4hG9abzv9ZLt84vK"
                             class="elementor-item elementor-item-anchor"
                             tabindex="-1"
                             >Live Charts</a
@@ -420,7 +409,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-471"
                         >
                           <a
-                            href="tglink"
+                            href="https://t.me/solgaydollar2024"
                             class="elementor-item elementor-item-anchor"
                             tabindex="-1"
                             >Telegram</a
@@ -430,7 +419,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-471"
                         >
                           <a
-                            href="twitterlink"
+                            href="https://x.com/solgaydollar"
                             class="elementor-item elementor-item-anchor"
                             tabindex="-1"
                             >Twitter</a
@@ -503,12 +492,12 @@
                   <div class="elementor-widget-container">
                     <div class="elementor-button-wrapper">
                       <a
-                        href="https://app.uniswap.org/#/swap?exactField=input&exactAmount=1&inputCurrency=ETH&outputCurrency= "
+                        href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=Hw1VrbuyX6PNLd6XX82VF2qvZjoHvoHjkhknCeR3F8S2&fixed=in"
                         target="_blank"
                         class="elementor-button-link elementor-button elementor-size-md"
                         role="button"
                         style="
-                          background-color: #c052e8;
+                          background-color: #6d52e8;
                           color: #ffffff;
                           font-family: 'custom2', cursive;
                           border-radius: 20px 20px 20px 20px;
@@ -525,7 +514,7 @@
                           <span
                             class="elementor-button-text"
                             style="font-size: 36px"
-                            >Buy $Jonesy</span
+                            >Buy $SOLLAR</span
                           >
                         </span>
                       </a>
@@ -544,7 +533,7 @@
                       <span class="elementor-grid-item">
                         <a
                           class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-59af8f2"
-                          href="tglink"
+                          href="https://t.me/solgaydollar2024"
                           target="_blank"
                           style="
                             background-color: #c052e800;
@@ -561,7 +550,7 @@
                       <span class="elementor-grid-item">
                         <a
                           class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-8a9f600"
-                          href="twitterlink"
+                          href="https://x.com/solgaydollar"
                           target="_blank"
                           style="
                             background-color: #c052e800;
@@ -647,7 +636,7 @@
                                 font-size: 44px;
                               "
                             >
-                              What is Jonesy?
+                              What is SOLLAR?
                             </h2>
                           </div>
                         </div>
@@ -659,19 +648,11 @@
                         >
                           <div class="elementor-widget-container">
                             <p style="font-size: 22px">
-                              In the volatile expanse of crypto markets,
-                              "Jonesy" emerges as a unique digital token, a
-                              cryptographic asset shrouded in enigma.
-                              Functioning as a living algorithm on blockchain
-                              landscapes, Jonesy represents more than a token;
-                              it's a key to encrypted opportunities. Rumored to
-                              embody an advanced blockchain consciousness,
-                              Jonesy is the nexus of decentralized narratives,
-                              guiding investors through encrypted paths of
-                              potential. Those who decrypt the whispers encoded
-                              in Jonesy's smart contracts may unlock the secrets
-                              to a digital realm where the boundaries between
-                              tokenomics and reality blur into obscurity.
+                              The first Solana token to launch with a $1 LP.
+                              SolGayDollar2024 is an innovative masterpiece that
+                              will be the biggest Solana token in 2024. All
+                              profits will be donated to fund dev's gender
+                              transition surgery.
                               <!-- <audio autoplay controls>
                                 <source src="" type="audio/mp4 " />
                                 Your browser does not support the audio element.
@@ -787,7 +768,7 @@
                         data-widget_type="text-editor.default"
                       >
                         <div class="elementor-widget-container">
-                          <p>Liquidity will be locked !</p>
+                          <p>Liquidity will be Burned !</p>
                         </div>
                       </div>
                     </div>
@@ -823,7 +804,7 @@
                       >
                         <div class="elementor-widget-container">
                           <p>
-                            There will be 1% tax for buying and selling of the
+                            There will be 0% tax for buying and selling of the
                             token.
                           </p>
                         </div>
@@ -842,12 +823,7 @@
                       flex-wrap: wrap;
                       gap: 20px;
                     "
-                  >
-                    <img
-                      src="photo_2023-09-03_20-15-08.jpg"
-                      style="width: 80%; margin: 0 auto"
-                    />
-                  </div>
+                  ></div>
 
                   <div
                     class="elementor-column elementor-col-40 elementor-inner-column elementor-element elementor-element-6baf696 animated fadeInLeft"
@@ -891,7 +867,9 @@
                           class="elementor-widget-container"
                           style="font-size: 15px"
                         >
-                          <p><wbr /> 0x0000000000000000000000000000</p>
+                          <p>
+                            <wbr />Hw1VrbuyX6PNLd6XX82VF2qvZjoHvoHjkhknCeR3F8S2
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -1007,11 +985,12 @@
                   data-widget_type="text-editor.default"
                 >
                   <div class="elementor-widget-container">
-                    <p>©2023 Jonesy</p>
+                    <p>©2023 SOLGAYDOLLAR2024</p>
                     <p>
-                      Jonesy: the enigmatic crypto token navigating the digital
-                      frontier. A living algorithm on the blockchain, Jonesy
-                      isn't just a token; it's a key to encrypted possibilities.
+                      SOLGAYDOLLAR2024: the enigmatic crypto token navigating
+                      the digital frontier. A living algorithm on the
+                      blockchain, SOLGAYDOLLAR2024 isn't just a token; it's a
+                      key to encrypted possibilities.
                     </p>
                   </div>
                 </div>
