--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="UTF-8" />
-    <title>SOLGAYDOLLAR2024</title>
+    <title>Black Dragon SOLciety</title>
 
     <meta property="og:image" content="./pow.png" />
 
@@ -267,7 +267,7 @@
                       <h1
                         style="font-family: 'custom2', cursive; color: #c052e8"
                       >
-                        $SOLLAR
+                        $BDragon
                       </h1>
                       <!-- <img src="./txt.png" width="100%" height="100%"> -->
                     </a>
@@ -319,7 +319,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-471"
                         >
                           <a
-                            href="https://x.com/solgaydollar"
+                            href="twitterlink"
                             class="elementor-item elementor-item-anchor"
                             >Twitter</a
                           >
@@ -333,7 +333,7 @@
                           <div class="elementor-widget-container">
                             <div class="elementor-button-wrapper">
                               <a
-                                href="https://t.me/solgaydollar2024"
+                                href="https://t.me/BlackDragonSOLciety"
                                 target="_blank"
                                 class="elementor-button-link elementor-button elementor-size-lg kkkkkksa"
                                 role="button"
@@ -409,7 +409,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-471"
                         >
                           <a
-                            href="https://t.me/solgaydollar2024"
+                            href="https://t.me/BlackDragonSOLciety"
                             class="elementor-item elementor-item-anchor"
                             tabindex="-1"
                             >Telegram</a
@@ -419,7 +419,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-471"
                         >
                           <a
-                            href="https://x.com/solgaydollar"
+                            href="twitterlink"
                             class="elementor-item elementor-item-anchor"
                             tabindex="-1"
                             >Twitter</a
@@ -492,7 +492,7 @@
                   <div class="elementor-widget-container">
                     <div class="elementor-button-wrapper">
                       <a
-                        href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=Hw1VrbuyX6PNLd6XX82VF2qvZjoHvoHjkhknCeR3F8S2&fixed=in"
+                        href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x0000000000000000000000000000000000&fixed=in"
                         target="_blank"
                         class="elementor-button-link elementor-button elementor-size-md"
                         role="button"
@@ -514,7 +514,7 @@
                           <span
                             class="elementor-button-text"
                             style="font-size: 36px"
-                            >Buy $SOLLAR</span
+                            >Buy $BDragon</span
                           >
                         </span>
                       </a>
@@ -533,7 +533,7 @@
                       <span class="elementor-grid-item">
                         <a
                           class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-repeater-item-59af8f2"
-                          href="https://t.me/solgaydollar2024"
+                          href="https://t.me/BlackDragonSOLciety"
                           target="_blank"
                           style="
                             background-color: #c052e800;
@@ -550,7 +550,7 @@
                       <span class="elementor-grid-item">
                         <a
                           class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-8a9f600"
-                          href="https://x.com/solgaydollar"
+                          href="twitterlink"
                           target="_blank"
                           style="
                             background-color: #c052e800;
@@ -636,7 +636,7 @@
                                 font-size: 44px;
                               "
                             >
-                              What is SOLLAR?
+                              What is Black Dragon?
                             </h2>
                           </div>
                         </div>
@@ -648,11 +648,19 @@
                         >
                           <div class="elementor-widget-container">
                             <p style="font-size: 22px">
-                              The first Solana token to launch with a $1 LP.
-                              SolGayDollar2024 is an innovative masterpiece that
-                              will be the biggest Solana token in 2024. All
-                              profits will be donated to fund dev's gender
-                              transition surgery.
+                              In the early 20th century, the Black Dragon
+                              SOLciety, inspired by the legendary black dragon,
+                              rose as a formidable paramilitary force in Japan
+                              from 1901 to 1923. Also known as Kokuryūkai, their
+                              clandestine influence left an indelible mark on
+                              history. Today, their legacy is intricately woven
+                              into the SOL blockchain, symbolizing their
+                              enduring presence. Emerging from the shadows, the
+                              Black Dragon SOLciety boldly enters the
+                              cryptocurrency landscape, poised to assert
+                              dominance and shape the future. This enigmatic
+                              force, once confined to secrecy, now stands ready
+                              to leave a lasting imprint on the evolving world.
                               <!-- <audio autoplay controls>
                                 <source src="" type="audio/mp4 " />
                                 Your browser does not support the audio element.
@@ -867,9 +875,7 @@
                           class="elementor-widget-container"
                           style="font-size: 15px"
                         >
-                          <p>
-                            <wbr />Hw1VrbuyX6PNLd6XX82VF2qvZjoHvoHjkhknCeR3F8S2
-                          </p>
+                          <p><wbr />0x0000000000000000000000000000000000</p>
                         </div>
                       </div>
                     </div>
@@ -889,15 +895,71 @@
               font-size: 69px;
             "
           >
-            MEME GALLERY
+            Dragon Society
           </h1>
           <div class="image-gallery">
             <div class="row">
               <div class="column">
+                <img src="./img10.jpg" alt="Image 1" />
+              </div>
+              <div class="column">
+                <img src="./img2.jpg" alt="Image 2" />
+              </div>
+              <div class="column">
+                <img src="./img8.jpg" alt="Image 3" />
+              </div>
+              <div class="column">
+                <img src="./img7.jpg" alt="Image 4" />
+              </div>
+            </div>
+            <div class="row">
+              <div class="column">
+                <img src="./img5.jpg" alt="Image 1" />
+              </div>
+              <div class="column">
+                <img src="./img6.jpg" alt="Image 2" />
+              </div>
+              <div class="column">
+                <img src="./img5.jpg" alt="Image 3" />
+              </div>
+              <div class="column">
+                <img src="./img4.jpg" alt="Image 4" />
+              </div>
+            </div>
+            <div class="row">
+              <div class="column">
+                <img src="./img3.jpg" alt="Image 1" />
+              </div>
+              <div class="column">
+                <img src="./img2.jpg" alt="Image 2" />
+              </div>
+              <div class="column">
+                <img src="./img.jpg" alt="Image 3" />
+              </div>
+              <div class="column">
+                <img src="./img6.jpg" alt="Image 4" />
+              </div>
+            </div>
+            <div class="row">
+              <div class="column">
+                <img src="./img7.jpg" alt="Image 1" />
+              </div>
+              <div class="column">
+                <img src="./img8.jpg" alt="Image 2" />
+              </div>
+              <div class="column">
+                <img src="./img9.jpg" alt="Image 3" />
+              </div>
+              <div class="column">
+                <img src="./img10.jpg" alt="Image 4" />
+              </div>
+            </div>
+            <!-- <div class="row">
+              <div class="column">
                 <img src="./11.jpg" alt="Image 1" />
               </div>
               <div class="column">
-                <img src="./1gif.gif" alt="Image 2" />
+                <img src="./4gif.gif" alt="Image 2" />
               </div>
               <div class="column">
                 <img src="./2.jpg" alt="Image 3" />
@@ -905,63 +967,7 @@
               <div class="column">
                 <img src="./2gif.gif" alt="Image 4" />
               </div>
-            </div>
-            <div class="row">
-              <div class="column">
-                <img src="./3.jpeg" alt="Image 1" />
-              </div>
-              <div class="column">
-                <img src="./3gif.gif" alt="Image 2" />
-              </div>
-              <div class="column">
-                <img src="./7.jpeg" alt="Image 3" />
-              </div>
-              <div class="column">
-                <img src="./5.jpeg" alt="Image 4" />
-              </div>
-            </div>
-            <div class="row">
-              <div class="column">
-                <img src="./6.jpeg" alt="Image 1" />
-              </div>
-              <div class="column">
-                <img src="./4gif.gif" alt="Image 2" />
-              </div>
-              <div class="column">
-                <img src="./5gif.gif" alt="Image 3" />
-              </div>
-              <div class="column">
-                <img src="./8.jpeg" alt="Image 4" />
-              </div>
-            </div>
-            <div class="row">
-              <div class="column">
-                <img src="./9.jpeg" alt="Image 1" />
-              </div>
-              <div class="column">
-                <img src="./10.jpg" alt="Image 2" />
-              </div>
-              <div class="column">
-                <img src="./11.jpg" alt="Image 3" />
-              </div>
-              <div class="column">
-                <img src="./4gif.gif" alt="Image 4" />
-              </div>
-            </div>
-            <div class="row">
-              <div class="column">
-                <img src="./11.jpg" alt="Image 1" />
-              </div>
-              <div class="column">
-                <img src="./4gif.gif" alt="Image 2" />
-              </div>
-              <div class="column">
-                <img src="./2.jpg" alt="Image 3" />
-              </div>
-              <div class="column">
-                <img src="./2gif.gif" alt="Image 4" />
-              </div>
-            </div>
+            </div> -->
           </div>
         </div>
 
