--- a/index.html
+++ b/index.html
@@ -265,7 +265,10 @@
                   <div class="elementor-widget-container asda">
                     <a href="#">
                       <h1
-                        style="font-family: 'custom2', cursive; color: #c052e8"
+                        style="
+                          font-family: 'custom2', cursive;
+                          color: rgb(92, 34, 226);
+                        "
                       >
                         $BDragon
                       </h1>
@@ -338,7 +341,7 @@
                                 class="elementor-button-link elementor-button elementor-size-lg kkkkkksa"
                                 role="button"
                                 style="
-                                  background-color: #c052e8;
+                                  background-color: rgb(92, 34, 226);
                                   color: #ffffff;
                                   font-family: 'custom2', cursive;
                                   border-radius: 20px 20px 20px 20px;
@@ -497,7 +500,7 @@
                         class="elementor-button-link elementor-button elementor-size-md"
                         role="button"
                         style="
-                          background-color: #6d52e8;
+                          background-color: rgb(92, 34, 226);
                           color: #ffffff;
                           font-family: 'custom2', cursive;
                           border-radius: 20px 20px 20px 20px;
