--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                           color: rgb(92, 34, 226);
                         "
                       >
-                        $BDragon
+                        $bds
                       </h1>
                       <!-- <img src="./txt.png" width="100%" height="100%"> -->
                     </a>
@@ -517,7 +517,7 @@
                           <span
                             class="elementor-button-text"
                             style="font-size: 36px"
-                            >Buy $BDragon</span
+                            >Buy $bds</span
                           >
                         </span>
                       </a>
@@ -937,7 +937,7 @@
                 <img src="./img2.jpg" alt="Image 2" />
               </div>
               <div class="column">
-                <img src="./img.jpg" alt="Image 3" />
+                <img src="./img10.jpg" alt="Image 3" />
               </div>
               <div class="column">
                 <img src="./img6.jpg" alt="Image 4" />
