--- a/index.html
+++ b/index.html
@@ -994,12 +994,11 @@
                   data-widget_type="text-editor.default"
                 >
                   <div class="elementor-widget-container">
-                    <p>©2023 SOLGAYDOLLAR2024</p>
+                    <p>©2023 Black Dragon Solciety</p>
                     <p>
-                      SOLGAYDOLLAR2024: the enigmatic crypto token navigating
-                      the digital frontier. A living algorithm on the
-                      blockchain, SOLGAYDOLLAR2024 isn't just a token; it's a
-                      key to encrypted possibilities.
+                      $BDS : The Black Dragon SOLciety now embraces the dynamic
+                      realm of cryptocurrency, ready to assert dominance and
+                      shape the future of the world.
                     </p>
                   </div>
                 </div>
