--- a/index.html
+++ b/index.html
@@ -864,6 +864,37 @@
                           <h4
                             class="elementor-heading-title elementor-size-default"
                           >
+                            Supply
+                          </h4>
+                        </div>
+                      </div>
+                      <div
+                        class="elementor-element elementor-element-a4623ac elementor-widget elementor-widget-text-editor"
+                        data-id="a4623ac"
+                        data-element_type="widget"
+                        data-widget_type="text-editor.default"
+                      >
+                        <div
+                          class="elementor-widget-container"
+                          style="font-size: 15px"
+                        >
+                          <p><wbr />100,000,000,000 $BDS</p>
+                        </div>
+                      </div>
+                    </div>
+                    <div
+                      class="elementor-widget-wrap elementor-element-populated"
+                    >
+                      <div
+                        class="elementor-element elementor-element-0c5717c elementor-widget elementor-widget-heading"
+                        data-id="0c5717c"
+                        data-element_type="widget"
+                        data-widget_type="heading.default"
+                      >
+                        <div class="elementor-widget-container">
+                          <h4
+                            class="elementor-heading-title elementor-size-default"
+                          >
                             Contract:
                           </h4>
                         </div>
