--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-468"
                         >
                           <a
-                            href="https://www.dextools.io/app/en/solana/pair-explorer/CvMJZci2QWPPVMMPfgoQ6Xg1YsVQ4hG9abzv9ZLt84vK"
+                            href="chartlink"
                             class="elementor-item elementor-item-anchor"
                             >Live Chart</a
                           >
@@ -391,7 +391,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-469"
                         >
                           <a
-                            href="https://www.dextools.io/app/en/solana/pair-explorer/CvMJZci2QWPPVMMPfgoQ6Xg1YsVQ4hG9abzv9ZLt84vK"
+                            href="chartlink"
                             class="elementor-item elementor-item-anchor"
                             tabindex="-1"
                             >Live Charts</a
