--- a/index.html
+++ b/index.html
@@ -319,6 +319,15 @@
                           >
                         </li>
                         <li
+                          class="menu-item menu-item-type-custom menu-item-object-custom menu-item-470"
+                        >
+                          <a
+                            href="https://theblackdragon.medium.com/"
+                            class="elementor-item elementor-item-anchor"
+                            >Medium</a
+                          >
+                        </li>
+                        <li
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-471"
                         >
                           <a
@@ -406,6 +415,16 @@
                             class="elementor-item elementor-item-anchor"
                             tabindex="-1"
                             >Tokenomics</a
+                          >
+                        </li>
+                        <li
+                          class="menu-item menu-item-type-custom menu-item-object-custom menu-item-470"
+                        >
+                          <a
+                            href="https://theblackdragon.medium.com/"
+                            class="elementor-item elementor-item-anchor"
+                            tabindex="-1"
+                            >Medium</a
                           >
                         </li>
                         <li
