--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-471"
                         >
                           <a
-                            href="twitterlink"
+                            href="https://twitter.com/BD_SOLCIETY"
                             class="elementor-item elementor-item-anchor"
                             >Twitter</a
                           >
@@ -441,7 +441,7 @@
                           class="menu-item menu-item-type-custom menu-item-object-custom menu-item-471"
                         >
                           <a
-                            href="twitterlink"
+                            href="https://twitter.com/BD_SOLCIETY"
                             class="elementor-item elementor-item-anchor"
                             tabindex="-1"
                             >Twitter</a
@@ -572,7 +572,7 @@
                       <span class="elementor-grid-item">
                         <a
                           class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-8a9f600"
-                          href="twitterlink"
+                          href="https://twitter.com/BD_SOLCIETY"
                           target="_blank"
                           style="
                             background-color: #c052e800;
